# mlx-experiments

./: coloring.txt  main.py  pyproject.toml  visible_bias_init.txt
src/: consts.py  sparse.py
src/autoencoder/: main.py
src/distributed/: main.py
src/fashion_mnist/: README.md  train.py
src/ppo-experiment/: debug_kl.py  debug_test.py  debug_test2.py  test.py
src/sparse-dbm/: consts.py  examples.md  sparse.py  sparse_dbm.py
src/sparse-dbm/tests/: test_compile.py  test_correlation_speedup.py  test_integration.py  test_sparse.py  test_sparse_batch.py  test_sparse_dbm.py
src/speculative-decoding/: speculative-decoding.py
tests/: test_compilation_timing.py  test_sparse_dbm.py
